# wstasks

./: LICENSE  README.md  docker-compose.yml
backend/: .gitignore  Dockerfile  local.env  pyproject.toml  requirements.txt
backend/src/: lifespan.py  main.py  pubsub.py  router.py  tasks.py
backend/src/config/: celery.py  database.py  redis.py  settings.py
backend/wstasks_backend/: lifespan.py  main.py  pubsub.py  router.py  tasks.py  ws_connections.py
backend/wstasks_backend/config/: celery.py  database.py  redis.py  settings.py
backend/wstasks_backend/config/middlewares/: cors.py
backend/wstasks_backend/core/: pubsub.py  router.py  serializers.py  tasks.py
frontend/: .gitignore  Dockerfile  index.html  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/base/: footer.tsx  header.tsx  main.tsx
frontend/src/components/buttons/: dispatch-task.tsx
frontend/src/components/pagination/: root.tsx
frontend/src/components/tasks/: instance.tsx  list.tsx  status.tsx
frontend/src/types/: task.ts
