[tool.poetry]
name = "wstasks-backend"
version = "0.1.0"
description = ""
license = "MIT"
authors = ["Lucas Rocha <lucash.rocha@hotmail.com>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.12"
flower = "^2.0.1"
celery = {extras = ["redis"], version = "^5.4.0"}
fastapi = "^0.115.3"
python-dotenv = "^1.0.1"
uvicorn = "^0.32.0"
peewee = "^3.17.7"
psycopg2-binary = "^2.9.10"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
